--- a/dino_model.ipynb
+++ b/dino_model.ipynb
@@ -3,17 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import os, shutil"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,88 +10,24 @@
      "output_type": "stream",
      "text": [
       "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
    ],
    "source": [
+    "import os, shutil\n",
+    "import tensorflow as tf\n",
     "from keras import layers\n",
     "from keras import models\n",
     "from keras import optimizers\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.preprocessing import image\n",
     "from keras.models import load_model\n",
-    "import keras"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from PIL import Image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import classification_report, confusion_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from keras.preprocessing import image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "import keras\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import time"
    ]
   },
@@ -115,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -168,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -182,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -196,16 +121,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total training jump images: 444\n",
+      "total training jump images: 434\n",
       "total training nojump images: 395\n",
-      "total validation jump images: 55\n",
+      "total validation jump images: 65\n",
       "total validation nojump images: 81\n",
       "total test jump images: 24\n",
       "total test nojump images: 197\n"
@@ -223,21 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = models.Sequential()\n",
-    "model.add(layers.Conv2D(32, (10,10), activation = \"relu\", input_shape=(250, 75, 3)))\n",
-    "model.add(layers.MaxPooling2D((2,2)))\n",
+    "model.add(layers.Conv2D(32, (10,10), activation = \"relu\", input_shape=(75, 250, 3)))\n",
+    "model.add(layers.MaxPooling2D((3,3)))\n",
     "model.add(layers.Conv2D(64, (10,10), activation = \"relu\"))\n",
-    "model.add(layers.MaxPooling2D((2,2)))\n",
+    "model.add(layers.MaxPooling2D((3,3)))\n",
     "#model.add(layers.Conv2D(128, (10,10), activation=\"relu\"))\n",
     "#model.add(layers.MaxPooling2D((2,2)))\n",
-    "model.add(layers.Conv2D(128, (5,5), activation=\"relu\"))\n",
-    "model.add(layers.MaxPooling2D((2,2)))\n",
+    "#model.add(layers.Conv2D(128, (5,5), activation=\"relu\"))\n",
+    "#model.add(layers.MaxPooling2D((3,3)))\n",
     "model.add(layers.Flatten())\n",
     "model.add(layers.Dense(512, activation=\"relu\"))\n",
     "model.add(layers.Dense(1, activation = \"sigmoid\"))"
@@ -245,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -255,26 +178,22 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 241, 66, 32)       9632      \n",
+      "conv2d_10 (Conv2D)           (None, 66, 241, 32)       9632      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 120, 33, 32)       0         \n",
+      "max_pooling2d_9 (MaxPooling2 (None, 22, 80, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 111, 24, 64)       204864    \n",
+      "conv2d_11 (Conv2D)           (None, 13, 71, 64)        204864    \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 55, 12, 64)        0         \n",
+      "max_pooling2d_10 (MaxPooling (None, 4, 23, 64)         0         \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 51, 8, 128)        204928    \n",
+      "flatten_3 (Flatten)          (None, 5888)              0         \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 25, 4, 128)        0         \n",
+      "dense_5 (Dense)              (None, 512)               3015168   \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 12800)             0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 512)               6554112   \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 513       \n",
+      "dense_6 (Dense)              (None, 1)                 513       \n",
       "=================================================================\n",
-      "Total params: 6,974,049\n",
-      "Trainable params: 6,974,049\n",
+      "Total params: 3,230,177\n",
+      "Trainable params: 3,230,177\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -286,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -299,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -317,27 +236,27 @@
     "\n",
     "train_generator = train_datagen.flow_from_directory(\n",
     "        train_dir,\n",
-    "        target_size=(250, 75),\n",
+    "        target_size=(75, 250),\n",
     "        batch_size=20,\n",
     "        class_mode='binary')\n",
     "\n",
     "validation_generator = test_datagen.flow_from_directory(\n",
     "        validation_dir,\n",
-    "        target_size=(250, 75),\n",
+    "        target_size=(75, 250),\n",
     "        batch_size=10,\n",
     "        class_mode='binary')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data batch shape: (20, 250, 75, 3)\n",
+      "data batch shape: (20, 75, 250, 3)\n",
       "labels batch shape: (20,)\n"
      ]
     }
@@ -351,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -359,15 +278,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "150/150 [==============================] - 216s 1s/step - loss: 0.0859 - acc: 0.9687 - val_loss: 0.1341 - val_acc: 0.9734\n",
+      "150/150 [==============================] - 174s 1s/step - loss: 0.1086 - acc: 0.9579 - val_loss: 0.1190 - val_acc: 0.9793\n",
       "Epoch 2/5\n",
-      "150/150 [==============================] - 267s 2s/step - loss: 0.0737 - acc: 0.9717 - val_loss: 0.1477 - val_acc: 0.9713\n",
+      "150/150 [==============================] - 170s 1s/step - loss: 0.0888 - acc: 0.9650 - val_loss: 0.1172 - val_acc: 0.9652\n",
       "Epoch 3/5\n",
-      "150/150 [==============================] - 266s 2s/step - loss: 0.0604 - acc: 0.9796 - val_loss: 0.2013 - val_acc: 0.9731\n",
+      "150/150 [==============================] - 170s 1s/step - loss: 0.0742 - acc: 0.9710 - val_loss: 0.1375 - val_acc: 0.9713\n",
       "Epoch 4/5\n",
-      "150/150 [==============================] - 266s 2s/step - loss: 0.0479 - acc: 0.9810 - val_loss: 0.1519 - val_acc: 0.9713\n",
+      "150/150 [==============================] - 175s 1s/step - loss: 0.0618 - acc: 0.9746 - val_loss: 0.1421 - val_acc: 0.9711\n",
       "Epoch 5/5\n",
-      "150/150 [==============================] - 272s 2s/step - loss: 0.0424 - acc: 0.9860 - val_loss: 0.1587 - val_acc: 0.9734\n"
+      "150/150 [==============================] - 182s 1s/step - loss: 0.0474 - acc: 0.9813 - val_loss: 0.1375 - val_acc: 0.9754\n"
      ]
     }
    ],
@@ -382,35 +301,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'acc': [0.9683181605517442,\n",
-       "  0.9712449199291947,\n",
-       "  0.9797775495683139,\n",
-       "  0.980717181191554,\n",
-       "  0.9858442841855451],\n",
-       " 'loss': [0.08669909199117173,\n",
-       "  0.07407220898237689,\n",
-       "  0.06012557869787128,\n",
-       "  0.04799846998569165,\n",
-       "  0.04265388627777312],\n",
-       " 'val_acc': [0.973360650607797,\n",
-       "  0.9713114688142401,\n",
-       "  0.9731404906954647,\n",
-       "  0.9713114710127722,\n",
-       "  0.973360650607797],\n",
-       " 'val_loss': [0.13408325952535008,\n",
-       "  0.14774908389148042,\n",
-       "  0.20129988386756587,\n",
-       "  0.15186736612366106,\n",
-       "  0.15870190767636216]}"
+       "{'acc': [0.9578698951265087,\n",
+       "  0.9644790192579545,\n",
+       "  0.970677446587784,\n",
+       "  0.9746278703656345,\n",
+       "  0.9811257117116817],\n",
+       " 'loss': [0.10875827293729401,\n",
+       "  0.08964133916986056,\n",
+       "  0.07482309369081559,\n",
+       "  0.06189622275477101,\n",
+       "  0.04790713899572078],\n",
+       " 'val_acc': [0.9793388397733042,\n",
+       "  0.9651639310062908,\n",
+       "  0.9713114697913654,\n",
+       "  0.971074374500385,\n",
+       "  0.9754098316685098],\n",
+       " 'val_loss': [0.11896656453320834,\n",
+       "  0.1171804571807667,\n",
+       "  0.13754523269732896,\n",
+       "  0.1420893225432104,\n",
+       "  0.13753560333277506]}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,31 +340,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "os.chdir(\"C:/Users/bened/OneDrive/Arbeit/Lernen/python_training/\")\n",
-    "model.save('jump_nojump_v3.h5')"
+    "model.save('jump_nojump_v4.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "os.chdir(\"C:/Users/bened/OneDrive/Arbeit/Lernen/python_training/\")\n",
-    "model = load_model('jump_nojump_v1.h5')"
+    "model = load_model('jump_nojump_v4.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +378,7 @@
    "source": [
     "test_generator = test_datagen.flow_from_directory(\n",
     "        test_dir,\n",
-    "        target_size=(250, 75),\n",
+    "        target_size=(75, 250),\n",
     "        batch_size=221,\n",
     "        class_mode='binary',\n",
     "        shuffle = False)\n"
@@ -467,17 +386,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test acc: 0.9502262473106384\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_loss, test_acc = model.evaluate_generator(test_generator, steps=50)\n",
     "print('test acc:', test_acc)"
